--- a/docs/engx/0. Foreword.md
+++ b/docs/engx/0. Foreword.md
@@ -3,61 +3,61 @@
 <!--
 tags: [EngX]
 -->
-
-- [Foreword](#foreword)
-  - [Standards for systems and software engineering](#standards-for-systems-and-software-engineering)
-  - [Software Development Life Cycle (SDLC)](#software-development-life-cycle-sdlc)
-    - [Definitions](#definitions)
-    - [SDLC benefits](#sdlc-benefits)
-    - [Stages](#stages)
-      - [Planning](#planning)
-      - [Requirements](#requirements)
-      - [Design and prototyping](#design-and-prototyping)
-      - [Software development](#software-development)
-      - [Testing](#testing)
-      - [Deployment](#deployment)
-      - [Operations and maintenance](#operations-and-maintenance)
-    - [SDLC models and methodologies](#sdlc-models-and-methodologies)
-      - [Waterfall model](#waterfall-model)
-      - [V-shaped model](#v-shaped-model)
-      - [Iterative model](#iterative-model)
-      - [Spiral model](#spiral-model)
-      - [Agile Framework](#agile-framework)
-      - [Scrum Framework](#scrum-framework)
-  - [Project plan](#project-plan)
-    - [Why do you need a plan?](#why-do-you-need-a-plan)
-      - [Productivity - Производительность](#productivity---производительность)
-      - [Delegation](#delegation)
-      - [Organization](#organization)
-      - [Motivation](#motivation)
-    - [How a project plan helps the project manager?](#how-a-project-plan-helps-the-project-manager)
-    - [Simple planning tools](#simple-planning-tools)
-    - [Work Breakdown Structure (WBS)](#work-breakdown-structure-wbs)
-      - [Types of WBS in project management](#types-of-wbs-in-project-management)
-      - [Work breakdown structure hierarchy](#work-breakdown-structure-hierarchy)
-        - [WBS level 0](#wbs-level-0)
-        - [WBS level 1](#wbs-level-1)
-        - [WBS level 2](#wbs-level-2)
-        - [WBS level 3](#wbs-level-3)
-      - [How to create a work breakdown structure?](#how-to-create-a-work-breakdown-structure)
-        - [The 100% rule](#the-100-rule)
-        - [The 8/80 rule](#the-880-rule)
-        - [Work package assignments](#work-package-assignments)
-        - [Unique deliverables](#unique-deliverables)
-        - [Clear deadlines](#clear-deadlines)
-        - [Outcomes over actions](#outcomes-over-actions)
-      - [WBS in Agile project management](#wbs-in-agile-project-management)
-    - [Checklists](#checklists)
-    - [Others planning tools](#others-planning-tools)
-  - [to-do](#to-do)
-
+<!-- TOC -->
+* [Foreword](#foreword)
+  * [Standards for systems and software engineering](#standards-for-systems-and-software-engineering)
+  * [Software Development Life Cycle (SDLC)](#software-development-life-cycle-sdlc)
+    * [Definitions](#definitions)
+    * [SDLC benefits](#sdlc-benefits)
+    * [Stages](#stages)
+      * [Planning](#planning)
+      * [Requirements](#requirements)
+      * [Design and prototyping](#design-and-prototyping)
+      * [Software development](#software-development)
+      * [Testing](#testing)
+      * [Deployment](#deployment)
+      * [Operations and maintenance](#operations-and-maintenance)
+    * [SDLC models and methodologies](#sdlc-models-and-methodologies)
+      * [Waterfall model](#waterfall-model)
+      * [V-shaped model](#v-shaped-model)
+      * [Iterative model](#iterative-model)
+      * [Spiral model](#spiral-model)
+      * [Agile Framework](#agile-framework)
+      * [Scrum Framework](#scrum-framework)
+  * [Project plan](#project-plan)
+    * [Why do you need a plan?](#why-do-you-need-a-plan)
+      * [Productivity - Производительность](#productivity---производительность)
+      * [Delegation](#delegation)
+      * [Organization](#organization)
+      * [Motivation](#motivation)
+    * [How a project plan helps the project manager?](#how-a-project-plan-helps-the-project-manager)
+    * [Simple planning tools](#simple-planning-tools)
+    * [Work Breakdown Structure (WBS)](#work-breakdown-structure-wbs)
+      * [Types of WBS in project management](#types-of-wbs-in-project-management)
+      * [Work breakdown structure hierarchy](#work-breakdown-structure-hierarchy)
+        * [WBS level 0](#wbs-level-0)
+        * [WBS level 1](#wbs-level-1)
+        * [WBS level 2](#wbs-level-2)
+        * [WBS level 3](#wbs-level-3)
+      * [How to create a work breakdown structure?](#how-to-create-a-work-breakdown-structure)
+        * [The 100% rule](#the-100-rule)
+        * [The 8/80 rule](#the-880-rule)
+        * [Work package assignments](#work-package-assignments)
+        * [Unique deliverables](#unique-deliverables)
+        * [Clear deadlines](#clear-deadlines)
+        * [Outcomes over actions](#outcomes-over-actions)
+      * [WBS in Agile project management](#wbs-in-agile-project-management)
+    * [Checklists](#checklists)
+    * [Others planning tools](#others-planning-tools)
+  * [to-do](#to-do)
+<!-- TOC -->
 ## Standards for systems and software engineering
 
 [ISO/IEC/IEEE 12207:2017](https://standards.ieee.org/ieee/12207/5672/) is an international standard for software life-cycle processes (SLCP).
 
 [ISO/IEC/IEEE 12207:2017](https://standards.ieee.org/ieee/12207/5672/) — это международный стандарт процессов жизненного цикла программного обеспечения (SLCP, software life-cycle processes).
 
-This International Standard establishes a common framework for software life cycle processes, with well defined terminology, that can be referenced by the software industry. It contains processes, activities, and tasks that are to be applied during the acquisition of a software system, product or service and during the supply, development, operation, maintenance and disposal of software products.
+This International Standard establishes a common framework for software life cycle processes, with well-defined terminology, that can be referenced by the software industry. It contains processes, activities, and tasks that are to be applied during the acquisition of a software system, product or service and during the supply, development, operation, maintenance and disposal of software products.
 
 Настоящий международный стандарт устанавливает общую структуру процессов жизненного цикла программного обеспечения с четко определенной терминологией, на которую может ссылаться индустрия программного обеспечения. Он содержит процессы, действия и задачи, которые должны применяться при приобретении программной системы, продукта или услуги, а также при поставке, разработке, эксплуатации, техническом обслуживании и утилизации программных продуктов.
 
@@ -180,7 +180,7 @@ Ideally, Project Managers and Development staff collaborate with Operations and 
 
 #### Requirements
 
-The business must communicate with IT teams to convey their requirements for new development and enhancement. The requirements phase gathers these requirements from business stakeholders and Subject Matter Experts (SMEs.)
+The business must communicate with IT teams to convey their requirements for new development and enhancement. The requirements phase gathers these requirements from business stakeholders and Subject-Matter Experts (SMEs.)
 
 Бизнес должен взаимодействовать с ИТ-командами, чтобы донести свои требования к новым разработкам и усовершенствованиям. На этапе требований выполняется сбор этих требований от заинтересованных сторон, экспертов предметной области.
 
@@ -218,19 +218,19 @@ The testing phase of the SDLC is arguably one of the most important. It is impos
 
 The best way to ensure that tests are run regularly, and never skipped for expediency, is to automate them. Tests can be automated using Continuous Integration tools, like [Codeship](https://www.cloudbees.com/products/codeship), for example. The output of the testing phase is functional software, ready for deployment to a production environment.
 
-Лучший способ гарантировать, что тесты выполняются регулярно и никогда не пропускаются по соображениям целесообразности, - автоматизация тестирования. Тесты могут быть автоматизированы с помощью инструментов непрерывной интеграции (CI), таких как, например, [Codeship](https://www.cloudbees.com/products/codeship). Результатом этапа тестирования является функциональное программное обеспечение, готовое к развертыванию в производственной среде.
+Лучший способ гарантировать, что тесты выполняются регулярно и никогда не пропускаются по соображениям целесообразности,- автоматизация тестирования. Тесты могут быть автоматизированы с помощью инструментов непрерывной интеграции (CI), например, таких, как [Codeship](https://www.cloudbees.com/products/codeship). Результатом этапа тестирования является функциональное программное обеспечение, готовое к развертыванию в производственной среде.
 
 #### Deployment
 
 The deployment phase is, ideally, a highly automated phase. In high-maturity enterprises, this phase is almost invisible; software is deployed the instant it is ready. Enterprises with lower maturity, or in some highly regulated industries, the process involves some manual approvals. However, even in those cases it is best for the deployment itself to be fully automated in a continuous deployment model. Application Release Automation (ARA) tools are used in medium and large-size enterprises to automate the deployment of applications to Production environments. ARA systems are usually integrated with Continuous Integration tools. The output of this phase is the release to Production of working software.
 
-ARA also known as application release orchestration, for exapmple, [The vRealize Code Stream utility from VMware](https://www.vmware.com/topics/glossary/content/application-release-automation.html).
+ARA also known as application release orchestration, for example, [The vRealize Code Stream utility from vmware](https://www.vmware.com/topics/glossary/content/application-release-automation.html).
 
 Этап развертывания, в идеале, является высокоавтоматизированным этапом. На предприятиях с высокой степенью зрелости этот этап практически незаметен; программное обеспечение развертывается в тот момент, когда оно готово. На предприятиях с более низкой степенью зрелости или в некоторых отраслях с высоким уровнем регулирования этот процесс требует некоторых согласований вручную. Однако даже в этих случаях лучше всего, чтобы само развертывание было полностью автоматизировано в рамках модели непрерывного развертывания (continuous deployment, CD). Средства автоматизации выпуска приложений (ARA, Application Release Automation) используются на средних и крупных предприятиях для автоматизации развертывания приложений в производственных средах. Системы ARA обычно интегрируются с инструментами непрерывной интеграции. Результатом этого этапа является запуск в производство работающего программного обеспечения.
 
 #### Operations and maintenance
 
-The operations and maintenance phase is the “end of the beginning,” so to speak. The Software Development Life Cycle doesn’t end here. Software must be monitored constantly to ensure proper operation. Bugs and defects discovered in Production must be reported and responded to, which often feeds work back into the process. Bug fixes may not flow through the entire cycle, however, at least an abbreviated process is necessary to ensure that the fix does not introduce other problems (known as a [regression](https://en.wikipedia.org/wiki/Regression_testing)).
+The operations and maintenance phase is the “end of the beginning,” so to speak. The Software Development Life Cycle does not end here. Software must be monitored constantly to ensure proper operation. Bugs and defects discovered in Production must be reported and responded to, which often feeds work back into the process. Bug fixes may not flow through the entire cycle, however, at least an abbreviated process is necessary to ensure that the fix does not introduce other problems (known as a [regression](https://en.wikipedia.org/wiki/Regression_testing)).
 
 Этап эксплуатации и технического обслуживания - это, так сказать, “конец начала”. Жизненный цикл разработки программного обеспечения на этом не заканчивается. Программное обеспечение должно постоянно контролироваться для обеспечения правильной работы. Об ошибках и дефектах, обнаруженных в процессе производства, необходимо сообщать и реагировать на них, что часто возвращает работу в процесс. Исправления ошибок могут выполняться не в течение всего цикла, однако, по крайней мере, сокращенный процесс необходим, чтобы гарантировать, что исправление не приведет к возникновению [других проблем](https://en.wikipedia.org/wiki/Regression_testing).
 
@@ -257,7 +257,7 @@ This model involves finishing each phase completely before commencing the next o
 
 The Waterfall method of software development follows a rigid, predetermined path through a set of phases. This method was adapted from traditional engineering. Ironically, the paper credited as the origin of the Waterfall method, describes it as being fundamentally flawed.
 
-Водопадный метод разработки программного обеспечения следует жесткому, заранее заданному пути, состоящему из набора этапов. Этот метод был адаптирован из традиционной инженерии. По иронии судьбы, статья, которая считается источником метода Waterfall, - [«Managing the development of large software systems», Dr. Winston W. Royce, 1970](https://web.archive.org/web/20160315200930/http://www.cs.umd.edu/class/spring2003/cmsc838p/Process/waterfall.pdf) - описывает его как в корне ошибочный.
+Водопадный метод разработки программного обеспечения следует жесткому, заранее заданному пути, состоящему из набора этапов. Этот метод был адаптирован из традиционной инженерии. По иронии судьбы, статья, которая считается источником метода Waterfall,- [«Managing the development of large software systems», Dr. Winston W. Royce, 1970](https://web.archive.org/web/20160315200930/http://www.cs.umd.edu/class/spring2003/cmsc838p/Process/waterfall.pdf) - описывает его как в корне ошибочный.
 
 > I believe in this concept, but the implementation described above is risky and invites failure. The problem is illustrated in Figure 4. The testing phase which occurs at the end of the development cycle is the first event for which timing, storage, input/output transfers, etc., are experienced as distinguished from analyzed. These phenomena are not precisely analyzable... Yet if these phenomena fail to satisfy the various external constraints, then invariably a major redesign is required. And simple octal patch or redo of some isolated code will not fix these kinds of difficulties. The required design changes are likely to be so disruptive that the software requirements upon which the design is based and which provides the rationale for everything are violated. Either the requirements must be modified, or a substantial change in the design is required. In effect the development process has returned to the origin and one can expect up to a 100-percent overrun in schedule and/or costs.
 
@@ -319,7 +319,7 @@ This model focuses on the execution of processes in a sequential manner, similar
 
 V-образная модель - "модель верификации и валидации" - является расширением "классического" waterfall. Эта модель фокусируется на последовательном выполнении процессов, аналогично водопадной модели, но с большим вниманием к тестированию. Процедуры тестирования пишутся еще до начала написания кода.
 
-После того, как требования зафиксированы, перед началом проектирования составляется план всех работ с указанием сроков и занятых ресурсов.
+После того как требования зафиксированы, перед началом проектирования составляется план всех работ с указанием сроков и занятых ресурсов.
 
 При проектировании постоянно выполняется верификация результатов текущего и предыдущих этапов проектирования, а также этапа сбора и анализа требований.
 
@@ -353,7 +353,7 @@ This is a very strict model and the next stage is started only after the previou
 - модульные тесты (unit tests);
 - интеграционные тесты (для проверки взаимодействия отдельных модулей между собой);
 - системные тексты (для проверки взаимодействия всей системы целиком);
-- приемо-сдаточные тесты (user acceptance tests, UAT).
+- приемосдаточные тесты (user acceptance tests, UAT).
 
 После завершения кодирования отдельного модуля выполняются модульные тесты для данного модуля.
 
@@ -374,7 +374,7 @@ This is a very strict model and the next stage is started only after the previou
 - Каждый шаг легко соотнести с конкретным требованием;
 - Легко управлять благодаря жесткости модели. Каждый этап V-Model имеет конкретные результаты и процесс проверки;
 - Легко контролировать все шаги процесса, т.к. у каждого шага есть четкие правила (а) начала этого шага (DoR, definition of ready) и (б) завершения этого шага (DoD, definition of done);
-- Верификация начинается сразу на первых шагах процесса, а тестирование - сразу после завершения кодирования отдельных частей системы; то есть дефекты  обнаруживаются чуть раньше, чем в модели waterfall.
+- Верификация начинается сразу на первых шагах процесса, а тестирование - сразу после завершения кодирования отдельных частей системы; то есть дефекты обнаруживаются чуть раньше, чем в модели waterfall.
 - Подходит для небольших проектов, где требования статичны и понятны;
 - [GAMP 5 (Good automated manufacturing practice)](https://ispe.org/initiatives/regulatory/what-gamp) рекомендует использовать V-модель.
 
@@ -471,11 +471,11 @@ Spiral model – is a combination of the Iterative and Waterfall SDLC models wit
 
 ОК, начали итеративную разработку с использованием технологического стека № 1.
 
-Через несколько итераций стали выявляться новые недостатки технологического стека № 1, которые не были изначально учтены. Дополнительные тесты показали, что лучше подходит для решения задачи все таки стек № 2. Тем не менее разработка продолжается с использованием технологического стека № 1, т.к. команда (комерсы, продакт, разрабы, архитекторы) оценивает, что концентрация рисков пока приемлема.
+Через несколько итераций стали выявляться новые недостатки технологического стека № 1, которые не были изначально учтены. Дополнительные тесты показали, что лучше подходит для решения задачи все таки стек № 2. Тем не менее разработка продолжается с использованием технологического стека № 1, т.к. команда (stakeholders, product owner, analytics, architects, developers) оценивает, что концентрация рисков пока приемлема.
 
 Еще через несколько итераций:
 
-- в соответствии с законом перехода количественных изменений в качественные концентрация рисков становится критической; уровень команда оценивает эмпирически, учитывая и текущее состояние Продукта, и проблемы будущего развития Продукта;
+- в соответствии с ["законом перехода количества в качество"](https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%BA%D0%BE%D0%BD_%D0%BF%D0%B5%D1%80%D0%B5%D1%85%D0%BE%D0%B4%D0%B0_%D0%BA%D0%BE%D0%BB%D0%B8%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B8%D0%B7%D0%BC%D0%B5%D0%BD%D0%B5%D0%BD%D0%B8%D0%B9_%D0%B2_%D0%BA%D0%B0%D1%87%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B5) концентрация рисков становится критической; уровень команда оценивает эмпирически, учитывая и текущее состояние Продукта, и проблемы будущего развития Продукта;
 - команда принимает решение, что будет правильно переделать Продукт с использованием технологического стека № 2;
 - команда прекращает текущую итерацию и начинает новую.
 
@@ -497,17 +497,17 @@ Spiral model – is a combination of the Iterative and Waterfall SDLC models wit
 - Клиент не уверен в требованиях к конечному результату;
 - Основные изменения ожидаются в процессе разработки;
 - Рискованные проекты, нет уверенности, что требования к результату определены правильно;
-- Новый продукт, который следует выпускать в несколько этапов, чтобы получить достаточно отзывов клиентов.
+- Новый продукт, который следует выпускать в несколько этапов, чтобы получить достаточное количество отзывов клиентов.
 
 #### Agile Framework
 
 ![Agile Framework.Визуализация.](<../../assets/images/sdlc-agile-framework.png>)
 
-Most agile methods attempt to minimize risk by developing software in short timeboxes, called iterations, which typically last one to four weeks. Each iteration is like a miniature software project of its own, and includes all the tasks necessary to release the mini-increment of new functionality: planning, requirements analysis, design, coding, testing, and documentation. While iteration may not add enough functionality to warrant releasing the product, an agile software project intends to be capable of releasing new software at the end of every iteration. At the end of each iteration, the team reevaluates project priorities.
+Most agile methods attempt to minimize risk by developing software in a short times, called iterations, which typically last one to four weeks. Each iteration is like a miniature software project of its own, and includes all the tasks necessary to release the mini-increment of new functionality: planning, requirements analysis, design, coding, testing, and documentation. While iteration may not add enough functionality to warrant releasing the product, an agile software project intends to be capable of releasing new software at the end of every iteration. At the end of each iteration, the team reevaluates project priorities.
 
 Большинство agile-методов пытаются минимизировать риск, разрабатывая программное обеспечение в короткие сроки, называемые итерациями, которые обычно длятся от одной до четырех недель. Каждая итерация подобна собственному программному проекту в миниатюре и включает в себя все задачи, необходимые для выпуска мини-приращения новой функциональности: планирование, анализ требований, проектирование, кодирование, тестирование и документирование. Хотя итерация может не добавить достаточной функциональности, чтобы гарантировать выпуск продукта, проект гибкого программного обеспечения предполагает возможность выпуска нового программного обеспечения в конце каждой итерации. В конце каждой итерации команда пересматривает приоритеты проекта.
 
-Agile methods emphasize real-time communication, preferably face-to-face, over written documents. Most agile teams include all the people necessary to finish the software. At a minimum, this includes programmers and the people who define the product such as product managers, business analysts, or actual customers. The bullpen may also include testers, interface designers, technical writers, and management .
+Agile methods emphasize real-time communication, preferably face-to-face, overwritten documents. Most agile teams include all the people necessary to finish the software. At a minimum, this includes programmers and the people who define the product such as product managers, business analysts, or actual customers. The bullpen may also include testers, interface designers, technical writers, and management .
 
 Agile методы делают упор на общение в режиме реального времени, предпочтительно лицом к лицу, по сравнению с письменными документами. Большинство Agile-команд включают в себя всех людей, необходимых для доработки программного обеспечения. Как минимум, это включает программистов и людей, которые определяют продукт, таких как менеджеры по продуктам, бизнес-аналитики или реальные клиенты. В Agile-команду могут также входить тестировщики, дизайнеры интерфейсов, технические писатели и руководство.
 
@@ -610,7 +610,7 @@ Phases of the Scrum model:
 
 #### Organization
 
-Создание списка дел для одноразового проекта или переиспользование списка дела для повторяющихся проектов позволяет PM-у получить четкое представление о шагах, которые необходимо предпринять, и точных действиях, которые необходимо выполнить. Пожалуй, это самый простой и удобный способ создать схему с полным контролем над ходом проекта.
+Создание списка дел для одноразового проекта или переиспользование списка дела для повторяющихся проектов позволяет PM-у получить четкое представление о действиях, которые необходимо выполнить. Пожалуй, это самый простой и удобный способ создать схему с полным контролем над ходом проекта.
 
 План проекта - руководство к действию для команды на протяжении всего проекта, а PM получает:
 
@@ -621,7 +621,7 @@ Phases of the Scrum model:
 
 Рутинные задачи очень важны, но многие считают, что они скучны. Люди не любят делать что-то, что их утомляет. Поскольку вы не можете избавиться от повторяющихся процессов, вы все равно можете сделать их увлекательными с помощью плана работ.
 
-Каждый выполненный пункт плана в теории дает нам ощущение успеха, очередного достижения, сокращает список невыполненых работ по проекту.
+Каждый выполненный пункт плана в теории дает нам ощущение успеха, очередного достижения, сокращает список не выполненных работ по проекту.
 
 Еще немного, еще чуть-чуть... Задача PM-а постоянно актуализировать план, чтобы команда видела, ощущала, что приближается к цели.
 
@@ -671,7 +671,7 @@ These two differ in how they identify the project structure elements in the firs
 WBS, основанная на результатах, визуализирует взаимосвязь между результатами проекта и объемом работ:
 
 - есть контрольные точки проекта,
-- между контрольными точкам выполняются определенные работы, решаются определенные задачи проекта.
+- между контрольными точками выполняются определенные работы, решаются определенные задачи проекта.
 
 `A phase-based WBS` typically breaks the first level down into five elements (initiation, planning, execution, control, closeout) and then identifies deliverables within those phases.
 
@@ -693,7 +693,7 @@ The first (top) level of the WBS is the project title and the final deliverable.
 
 The second WBS level is control accounts. Control accounts is a management control point that groups work packages and measures their status. As such, it controls areas of the project scope. Control accounts include project major parts, phases, systems, or features the customer expects you to deliver.
 
-Второй уровень WBS – это контрольные точки, точки управления, которые группируют пакеты работ для измеряния статуса этих пакетов. Контрольная точка контролирует часть проекта.
+Второй уровень WBS – это контрольные точки, точки управления, которые группируют пакеты работ для измерения статуса этих пакетов. Контрольная точка контролирует часть проекта.
 
 ##### WBS level 2
 
@@ -725,7 +725,7 @@ One of the most critical work breakdown structure principles is the 100% (one-hu
 
 ##### The 8/80 rule
 
-The 8/80 rule will help you decide whether a given work package is small enough. The 8/80 means that a WBS work package should not take less than 8 (eight) hours of effort and a the same time, not more than 80 (eighty).
+The 8/80 rule will help you decide whether a given work package is small enough. The 8/80 means that a WBS work package should not take less than 8 (eight) hours of effort and the same time, not more than 80 (eighty).
 
 Правило 8/80 поможет вам решить, достаточно ли мал данный пакет работ. 8/80 означает, что пакет работ WBS не должен занимать менее 8 (восьми) часов усилий и в то же время не более 80 (восемьдесят) часов.
 
@@ -757,19 +757,19 @@ When naming project deliverables, try to use nouns rather than verbs. It does no
 
 There is a common belief that WBS goes well only with traditional project management methodologies such as Waterfall. Classic methodologies, in contrast to Agile methodologies, suit very well projects whose goals are unlikely to change. Because of that, a work breakdown structure is thought not to be flexible enough to match the Agile iterative nature.
 
-Существует распространенное мнение, что WBS хорошо сочетается только с традиционными методологиями управления проектами, такими как Waterfall. Классические методологии, в отличие от Agile, очень хорошо подходят для проектов, цели которых вряд ли изменятся. По этой причине WBS считается недостаточно гибкИм, чтобы соответствовать итеративной природе Agile.
+Существует распространенное мнение, что WBS хорошо сочетается только с традиционными методологиями управления проектами, такими как Waterfall. Классические методологии, в отличие от Agile, очень хорошо подходят для проектов, цели которых вряд ли изменятся. По этой причине WBS считается недостаточно гибким, чтобы соответствовать итеративной природе Agile.
 
 But that is not entirely true. Just think about it—if a WBS represents all the work that your teams need to put into the project, then a product backlog typical to Agile projects is sort of a WBS, too. In Agile, you break down large epics or features into smaller units (user stories) as you are about to develop them and control them during the sprints. In Waterfall, you break down the entire project into smaller units (work packages and tasks) upfront and control them throughout the project.
 
 Но это не совсем так. Просто подумайте: если WBS представляет всю работу, которую ваши команды должны вложить в проект, то типичный для Agile-проектов журнал невыполненных работ тоже является своего рода WBS. В Agile вы разбиваете большие эпики или функции на более мелкие единицы (пользовательские истории), когда собираетесь их разрабатывать и контролировать во время спринтов. В Waterfall вы заранее разбиваете весь проект на более мелкие части (рабочие пакеты и задачи) и контролируете их на протяжении всего проекта.
 
-So in this sense, a work breakdown structure is the equivalent of the product backlog. However, please keep in mind that in agile projects, the scope of work comes from the backlog and you do not know what you will be working on straight away. This is in contrast to the Waterfall methodology where you have defined the entire scope of the project before the project execution has begun.
+So in this sense, a work breakdown structure is the equivalent of the product backlog. However, please keep in mind that in agile projects, the scope of work comes from the backlog, and you do not know what you will be working on straight away. This is in contrast to the Waterfall methodology where you have defined the entire scope of the project before the project execution has begun.
 
 Таким образом, в этом смысле иерархическая структура работ является эквивалентом журнала невыполненных работ.
 
 ### Checklists
 
-Контрольный список (checklist), список дел (to-do list) практически тоже самое, что и WBS, выглядит чуть иначе.
+Контрольный список (checklist), список дел (to-do list) практически то же самое, что и WBS, выглядит чуть иначе.
 
 Пример:
 
@@ -785,22 +785,21 @@ So in this sense, a work breakdown structure is the equivalent of the product ba
     - Identify Quick Wins
   - Complete innovate phase
 
-или в табличном виде
+Или в табличном виде:
 
-| Phase | | | Action | Status | Deadline | Accountable | Responsible |
-| :--- | :--- | :--- | :--- | :---: | :---: | :--- | :--- |
-| Business Process Modelling WBS | | | | launching | 2023-10-01 | Person 1 | |
-| Launch the project | | | | waiting for a Big Boss | 2023-09-08 | Person 1 | Person 1, Person 2 |
-| | | | Complete Stakeholder Research | | | | |
-| | | | Initial Implementation Plan | | | | |
-| Design phase | | | | | | | |
-| | Model of AsIs Processes Completed | | | | | | |
-| | | Model of AsIs Processes Completed1 | | | | | |
-| | | Model of AsIs Processes Completed2 | | | | | |
-| | Measure AsIs performance metrics | | | | | | |
-| | Identify Quick Wins | | | | | | |
-| Complete innovate phase | | | | | | | |
-| | | | | | | | |
+| Phase                          |                                   |                                    | Action                        |         Status         |  Deadline  | Accountable | Responsible        |
+|:-------------------------------|:----------------------------------|:-----------------------------------|:------------------------------|:----------------------:|:----------:|:------------|:-------------------|
+| Business Process Modelling WBS |                                   |                                    |                               |       launching        | 2023-10-01 | Person 1    |                    |
+| Launch the project             |                                   |                                    |                               | waiting for a Big Boss | 2023-09-08 | Person 1    | Person 1, Person 2 |
+|                                |                                   |                                    | Complete Stakeholder Research |                        |            |             |                    |
+|                                |                                   |                                    | Initial Implementation Plan   |                        |            |             |                    |
+| Design phase                   |                                   |                                    |                               |                        |            |             |                    |
+|                                | Model of AsIs Processes Completed |                                    |                               |                        |            |             |                    |
+|                                |                                   | Model of AsIs Processes Completed1 |                               |                        |            |             |                    |
+|                                |                                   | Model of AsIs Processes Completed2 |                               |                        |            |             |                    |
+|                                | Measure AsIs performance metrics  |                                    |                               |                        |            |             |                    |
+|                                | Identify Quick Wins               |                                    |                               |                        |            |             |                    |
+| Complete innovate phase        |                                   |                                    |                               |                        |            |             |                    |
 
 ### Others planning tools
 
