--- a/docs/engx/4. Infrastructure Management.md
+++ b/docs/engx/4. Infrastructure Management.md
@@ -3,18 +3,18 @@
 <!--
 tags: [EngX]
 -->
-
-- [Infrastructure Management](#infrastructure-management)
-  - [Infrastructure Management (IM)](#infrastructure-management-im)
-  - [System Infrastructure and Cloud Service Models](#system-infrastructure-and-cloud-service-models)
-    - [System Infrastructure Options](#system-infrastructure-options)
-    - [Cloud Financial Operations (Cloud FinOps)](#cloud-financial-operations-cloud-finops)
-    - [Cloud Service Models](#cloud-service-models)
-  - [Approaches to Infrastructure Management](#approaches-to-infrastructure-management)
-  - [Infrastructure as Code](#infrastructure-as-code)
-  - [Infrastructure Management Tools](#infrastructure-management-tools)
-    - [Terraform Overview](#terraform-overview)
-
+<!-- TOC -->
+* [Infrastructure Management](#infrastructure-management)
+  * [Infrastructure Management (IM)](#infrastructure-management-im)
+  * [System Infrastructure and Cloud Service Models](#system-infrastructure-and-cloud-service-models)
+    * [System Infrastructure Options](#system-infrastructure-options)
+    * [Cloud Financial Operations (Cloud FinOps)](#cloud-financial-operations-cloud-finops)
+    * [Cloud Service Models](#cloud-service-models)
+  * [Approaches to Infrastructure Management](#approaches-to-infrastructure-management)
+  * [Infrastructure as Code](#infrastructure-as-code)
+  * [Infrastructure Management Tools](#infrastructure-management-tools)
+    * [Terraform Overview](#terraform-overview)
+<!-- TOC -->
 With widespread digitalization, it’s almost impossible for organizations to maintain a business without efficient IT infrastructure. Although the demand for servers has grown steadily over the years, the global pandemic exploded the market for them: in 2020, almost 13 million server units were shipped worldwide. The vast number of IT infrastructure assets in companies made system engineers search for creative ways to manage them. As today’s teams deal with unpredictable and unstable loads on projects due to organizational and market changes, engineers must be able to quickly and effectively launch, set up, shut down, and terminate servers daily. The infrastructure management industry seeks to provide solutions to this challenge.
 
 В условиях повсеместной цифровизации организациям практически невозможно вести бизнес без эффективной ИТ-инфраструктуры. Хотя спрос на серверы неуклонно рос на протяжении многих лет, глобальная пандемия взорвала их рынок: в 2020 году по всему миру было отгружено почти 13 миллионов серверных устройств. Огромное количество активов ИТ-инфраструктуры в компаниях заставило системных инженеров искать творческие способы управления ими. Поскольку современные команды сталкиваются с непредсказуемыми и нестабильными нагрузками на проекты из-за организационных изменений и изменений на рынке, инженеры должны уметь быстро и эффективно запускать, настраивать, выключать и завершать работу серверов ежедневно. Индустрия управления инфраструктурой стремится найти решения этой проблемы.
@@ -27,7 +27,7 @@ The management of essential technical operations—hardware, software, networkin
 
 Infrastructure management is a young industry that is still evolving. It deals with the oversight of key IT infrastructure elements required to deliver business services: physical components, software applications, and networking components. IT infrastructure management helps to manage storage, configure environments, install updates, and support the life cycle of assets—from server launch to termination. With the appropriate tools, a team can easily manage infrastructure to increase an application’s productivity and reduce project costs.
 
-Управление инфраструктурой - молодая отрасль, которая все еще развивается. Он занимается надзором за ключевыми элементами ИТ-инфраструктуры, необходимыми для предоставления бизнес-услуг: физическими компонентами, программными приложениями и сетевыми компонентами. Управление ИТ—инфраструктурой помогает управлять хранилищем, настраивать среды, устанавливать обновления и поддерживать жизненный цикл ресурсов - от запуска сервера до завершения работы. С помощью соответствующих инструментов команда может легко управлять инфраструктурой, чтобы повысить производительность приложения и снизить затраты на проект.
+Управление инфраструктурой - молодая отрасль, которая все еще развивается. Он занимается надзором за ключевыми элементами ИТ-инфраструктуры, необходимыми для предоставления бизнес-услуг: физическими компонентами, программными приложениями и сетевыми компонентами. Управление ИТ — инфраструктурой помогает управлять хранилищем, настраивать среды, устанавливать обновления и поддерживать жизненный цикл ресурсов - от запуска сервера до завершения работы. С помощью соответствующих инструментов команда может легко управлять инфраструктурой, чтобы повысить производительность приложения и снизить затраты на проект.
 
 ## System Infrastructure and Cloud Service Models
 
@@ -41,9 +41,9 @@ To make informed decisions, you and your team must be aware of the benefits, dra
 
 ### System Infrastructure Options
 
-When most companies still used physical infrastructure, the management process wasn’t flexible — engineers had to order, wait on, install, and configure physical servers manually. The first private clouds presented an opportunity to quickly order resources, and engineers started ordering servers or disk space through a one-minute request. Cloud infrastructure then became a de facto standard.
+When most companies still used physical infrastructure, the management process was not flexible — engineers had to order, wait on, install, and configure physical servers manually. The first private clouds presented an opportunity to quickly order resources, and engineers started ordering servers or disk space through a one-minute request. Cloud infrastructure then became a de facto standard.
 
-Когда большинство компаний все еще использовали физическую инфраструктуру, процесс управления не был гибким — инженерам приходилось заказывать, обслуживать, устанавливать и настраивать физические серверы вручную. Первые частные облака предоставили возможность быстро заказывать ресурсы, и инженеры начали заказывать серверы или дисковое пространство с помощью одноминутного запроса. Затем облачная инфраструктура стала стандартом де-факто.
+Когда большинство компаний все еще использовали физическую инфраструктуру, процесс управления не был гибким — инженерам приходилось заказывать, обслуживать, устанавливать и настраивать физические серверы вручную. Первые частные облака предоставили возможность быстро заказывать ресурсы, и инженеры начали заказывать серверы или дисковое пространство с помощью ONE MINUTE запроса. Затем облачная инфраструктура стала стандартом де-факто.
 
 Traditional physical on-premises data centers represent the most basic IT infrastructure.
 
@@ -61,7 +61,7 @@ When to Use Physical Infrastructure - When a team needs to develop software that
 
 Когда использовать физическую инфраструктуру - Когда команде необходимо разработать программное обеспечение, использующее пользовательское оборудование (например, автомобильное или медицинское оборудование), а виртуализация недоступна из-за характеристик пользовательского оборудования.
 
-Сloud infrastructure is a modern and efficient solution that is widely used by companies and constitutes a part of their budget. Therefore, it is essential to control infrastructure usage, monitor the budget, and manage costs. This task is entrusted to Cloud Financial Operations.
+Cloud infrastructure is a modern and efficient solution that is widely used by companies and constitutes a part of their budget. Therefore, it is essential to control infrastructure usage, monitor the budget, and manage costs. This task is entrusted to Cloud Financial Operations.
 
 Облачная инфраструктура - это современное и эффективное решение, которое широко используется компаниями и составляет часть их бюджета. Поэтому важно контролировать использование инфраструктуры, следить за бюджетом и управлять расходами. Эта задача возложена на облачные финансовые операции.
 
